[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sangjinye <tkdwlsdlzzz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mongoengine = "^0.20.0"
flask-classful = "^0.14.2"
marshmallow = "^3.7.1"
Flask-Cors = "^3.0.8"
flask = "1.1.1"
Pyjwt = "^1.7.1"
bcrypt = "^3.2.0"
flask_apispec = "^0.10.0"
flask-restplus = "^0.13.0"
Werkzeug = "^1.0.1"
flask_restful_swagger = "^0.20.2"
flask_swagger-ui = "^3.25.0"
flask_restplus = "^0.13.0"
arrow = "^0.16.0"
funcy = "^1.14"
flask_paginate = "^0.7.0"
flask_mongoengine = "^0.9.5"

[tool.poetry.dev-dependencies]
mongomock = "^3.20.0"
pytest = "^6.1"
pytest-factoryboy = "^2.0.3"
pytest-env = "^0.6.2"
pytest-flask = "^1.0.0"
pytest-cov = "^2.10.1"
pytest-xdist = "^1.31.0"
pytest-rerunfailures = "^9.1"
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
